--- a/angular.json
+++ b/angular.json
@@ -46,8 +46,9 @@
               "src/assets"
             ],
             "styles": [
-              "../node_modules/bootstrap/dist/css/bootstrap.css",
-              "src/styles.scss"
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/styles.scss",
+              "src/assets/fonts/fonts.scss"
             ],
             "scripts": []
           },
